# notifier

./: LICENSE  README.md  example.py  pyproject.toml  remove_dists.sh  setup.py
notifier/: cli.py  notify.py  toast.py  win10toast.py
notifier/os_notifiers/: windows_legacy.py
stbnotifications/: __init__.py  notify.py
tests/: test_notification.py
